--- a/configuration.properties
+++ b/configuration.properties
@@ -5,3 +5,4 @@ smartBearUrl=http://secure.smartbearsoftware.com/samples/testcomplete12/WebOrder
 username=Tester
 password=test
 browser=chrome
+basicAuthUrl=https://admin:admin@the-internet.herokuapp.com/basic_auth
