updated package name and added class notes

--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,4 @@ username=Tester
 password=test
 browser=chrome
 basicAuthUrl=https://admin:admin@the-internet.herokuapp.com/basic_auth
+testUrl=https://the-internet.herokuapp.com/
